added cancel to new review plus a bit more style

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
       </section>
 
       <section id="new-review">
+        <button class="cancel"><i class='fa fa-times-circle '></i></button>
         <form id="add-review-new">
           <h1>Fill out the form below and click submit to post a new must watch movie.</h1>
           <input type="text" placeholder="poster url" name="newPoster">
           <input type="text" placeholder="movie title" name="newTitle">
           <input type="text" placeholder="director" name="newDirector">
-          <input type="text" placeholder="write a review" name="newDesc">
+          <input type="text" placeholder="release date" name="newDesc">
           <button class="submit-review">submit movie</button>
         </form>
       </section>
