--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="js/data.js" charset="utf-8"></script>
   <script src="js/models.js" charset="utf-8"></script>
   <script src="js/collections.js" charset="utf-8"></script>
+  <script src="js/views.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
   </body>
 </html>
